@@ -38,6 +38,7 @@ PKG_CFLAGS = -FImsvc_recommended_pragmas.h \
 
 PKG_LINK = $(GTK2_LIBS) $(GLIB_LIBS) \
 	$(LIBXML2_LIBS) $(GDK_PIXBUF_LIBS) \
+	$(INTL_LIBS) \
 	$(PRJ_TOP)\lib\libdia.lib
 
 #
